--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,11 @@
 				xmlns:tools="http://schemas.android.com/tools"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:paddingBottom="@dimen/activity_vertical_margin"
-				android:paddingLeft="@dimen/activity_horizontal_margin"
-				android:paddingRight="@dimen/activity_horizontal_margin"
-				android:paddingTop="@dimen/activity_vertical_margin"
 				tools:context=".MainActivity">
+
+	<android.support.v4.view.ViewPager
+		android:id="@+id/pager_main"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"/>
 
 </RelativeLayout>
