--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,14 @@
 
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-		<!-- Customize your theme here. -->
+		<item name="android:windowBackground">@android:color/white</item>
+		<item name="android:windowTranslucentStatus">true</item>
+	</style>
+
+
+	<style name="AppTheme..Toolbar" parent="Theme.AppCompat.Light.NoActionBar">
+		<item name="android:windowBackground">@android:color/white</item>
+		<item name="android:windowTranslucentStatus">true</item>
 	</style>
 
 </resources>
