--- a/app/src/main/res/layout/view_item_post_image.xml
+++ b/app/src/main/res/layout/view_item_post_image.xml
@@ -14,6 +14,7 @@
 		android:paddingLeft="0.5dp"
 		android:paddingRight="0.5dp"
 		android:paddingTop="1dp"
-		android:scaleType="fitXY"/>
+		android:scaleType="fitXY"
+		android:transitionName="@string/share_hero"/>
 
 </FrameLayout>
