FIx style naming

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,15 @@
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 		<item name="android:windowBackground">@android:color/white</item>
-		<item name="android:windowTranslucentStatus">true</item>
 	</style>
 
 
-	<style name="AppTheme..Toolbar" parent="Theme.AppCompat.Light.NoActionBar">
-		<item name="android:windowBackground">@android:color/white</item>
-		<item name="android:windowTranslucentStatus">true</item>
+	<style name="AppTheme.Toolbar" parent="Theme.AppCompat.Light.NoActionBar">
+	<item name="android:windowBackground">@android:color/white</item>
+	</style>
+
+	<style name="AppTheme.Toolbar.TranslucentStatus" parent="AppTheme.Toolbar">
+	<item name="android:windowTranslucentStatus">true</item>
 	</style>
 
 </resources>
