--- a/app/src/main/res/layout/view_item_post_image.xml
+++ b/app/src/main/res/layout/view_item_post_image.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			 android:layout_width="wrap_content"
-			 android:layout_height="match_parent"
-			 android:background="@color/background_grey"
-			 android:clickable="true"
-			 android:foreground="?attr/selectableItemBackground">
+<FrameLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="wrap_content"
+	android:layout_height="match_parent"
+	android:layout_marginTop="1dp"
+	android:clickable="true"
+	android:foreground="?attr/selectableItemBackground">
 
 	<ImageView
 		android:id="@+id/image_post_image"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:adjustViewBounds="true"
-		android:paddingLeft="0.5dp"
-		android:paddingRight="0.5dp"
-		android:paddingTop="1dp"
-		android:scaleType="fitXY"
+		android:scaleType="centerCrop"
 		android:transitionName="@string/share_hero"/>
 
 </FrameLayout>
