--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,11 +3,15 @@
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 		<item name="android:windowBackground">@android:color/black</item>
+		<item name="android:windowActivityTransitions">true</item>
+		<item name="android:windowContentTransitions">true</item>
 	</style>
 
 
 	<style name="AppTheme.Toolbar" parent="Theme.AppCompat.Light.NoActionBar">
 		<item name="android:windowBackground">@android:color/black</item>
+		<item name="android:windowActivityTransitions">true</item>
+		<item name="android:windowContentTransitions">true</item>
 	</style>
 
 	<style name="AppTheme.Toolbar.TranslucentStatus" parent="AppTheme.Toolbar">
