--- a/app/src/main/res/layout/view_item_post_image.xml
+++ b/app/src/main/res/layout/view_item_post_image.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="wrap_content"
 	android:layout_height="match_parent"
-	android:layout_marginTop="1dp"
+	android:layout_margin="@dimen/space_extra_small"
 	android:clickable="true"
 	android:foreground="?attr/selectableItemBackground">
 
