--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,16 @@
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 		<item name="android:windowBackground">@android:color/black</item>
+		<item name="android:colorPrimary">@color/primary</item>
+		<item name="android:colorPrimaryDark">@color/primary_darker</item>
 		<item name="android:windowActivityTransitions">true</item>
 		<item name="android:windowContentTransitions">true</item>
 	</style>
 
 
 	<style name="AppTheme.Toolbar" parent="Theme.AppCompat.Light.NoActionBar">
+		<item name="android:colorPrimary">@color/primary</item>
+		<item name="android:colorPrimaryDark">@color/primary_darker</item>
 		<item name="android:windowBackground">@android:color/black</item>
 		<item name="android:windowActivityTransitions">true</item>
 		<item name="android:windowContentTransitions">true</item>
