--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -2,46 +2,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 				xmlns:tools="http://schemas.android.com/tools"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
+				android:layout_height="wrap_content"
 				android:orientation="vertical">
 
+	<ImageView
+		android:id="@+id/image_post"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:adjustViewBounds="true"
+		android:animateLayoutChanges="true"
+		android:scaleType="centerCrop"/>
+
 	<RelativeLayout
-		android:id="@+id/view_poster_container"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-
-		<ImageView
-			android:id="@+id/image_post"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:adjustViewBounds="true"
-			android:scaleType="centerCrop"/>
-
-	</RelativeLayout>
-
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/recycler_post_images"
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/post_images_pager_height"
-		android:layout_alignParentBottom="true"
-		android:paddingLeft="@dimen/space_extra_small"
-		android:paddingRight="@dimen/space_extra_small"
-		android:clipToPadding="false"
-		android:elevation="@dimen/space_large"
-		android:overScrollMode="never"/>
-
-	<TextView
-		android:id="@+id/text_post_title"
-		style="@style/TextAppearance.AppCompat.Medium.Inverse"
+		android:id="@+id/container_post_info"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_above="@id/recycler_post_images"
-		android:ellipsize="end"
-		android:fontFamily="sans-serif-light"
-		android:maxLines="1"
-		android:padding="@dimen/space_large"
-		android:textColor="@android:color/white"
-		tools:text="Title"/>
+		android:layout_alignParentBottom="true"
+		android:orientation="vertical"
+		android:translationY="@dimen/post_images_pager_height">
 
+
+		<TextView
+			android:id="@+id/text_post_title"
+			style="@style/TextAppearance.AppCompat.Medium.Inverse"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:ellipsize="end"
+			android:fontFamily="sans-serif-light"
+			android:maxLines="1"
+			android:padding="@dimen/space_large"
+			android:textColor="@android:color/white"
+			tools:text="Title"/>
+
+		<ImageButton
+			android:id="@+id/button_show_gallery"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentEnd="true"
+			android:background="?android:attr/selectableItemBackground"
+			android:padding="@dimen/space_large"
+			android:src="@drawable/ic_image_filter_white_24dp"
+			android:visibility="gone"
+			tools:showIn="@layout/fragment_post"/>
+
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/recycler_post_images"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/post_images_pager_height"
+			android:layout_below="@id/text_post_title"
+			android:clipToPadding="false"
+			android:elevation="@dimen/space_large"
+			android:overScrollMode="never"
+			android:paddingLeft="@dimen/space_extra_small"
+			android:paddingRight="@dimen/space_extra_small"/>
+
+	</RelativeLayout>
 
 </RelativeLayout>
