Fix a bug where gallery buttons are missing

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -47,10 +47,11 @@
 			<TextView
 				android:id="@+id/text_post_title"
 				style="@style/TextAppearance.AppCompat.Medium.Inverse"
-				android:layout_width="match_parent"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
-				android:layout_marginEnd="@dimen/space_largeX2"
+				android:layout_marginEnd="@dimen/space_large"
 				android:layout_toEndOf="@id/image_post_author"
+				android:layout_weight="1"
 				android:ellipsize="end"
 				android:fontFamily="sans-serif-light"
 				android:maxLines="1"
@@ -62,7 +63,6 @@
 				android:id="@+id/button_show_gallery"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_alignParentEnd="true"
 				android:layout_gravity="center"
 				android:background="?android:attr/selectableItemBackground"
 				android:padding="@dimen/space_large"
