--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"/>
 
+	<ProgressBar
+		android:id="@+id/progress_bar_main"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"/>
+
 	<View
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/action_bar_shadow_height"
