--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -12,7 +12,7 @@
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
 		android:adjustViewBounds="true"
-		android:scaleType="fitXY"
+		android:scaleType="fitCenter"
 		android:transitionName="@string/share_hero"/>
 
 	<LinearLayout
